--- a/app/includes/content_muse.html
+++ b/app/includes/content_muse.html
@@ -195,11 +195,11 @@
                     <tbody>
                         <tr>
                             <td>Модель</td>
-                            <td>YLTD03YL</td>
+                            <td>YLTD03YL, YLTD04YL</td>
                         </tr>
                         <tr>
                             <td>Цвет</td>
-                            <td>Белый</td>
+                            <td>Белый, Металик</td>
                         </tr>
                         <tr>
                             <td>Размеры</td>
