--- a/app/includes/shops.html
+++ b/app/includes/shops.html
@@ -90,7 +90,7 @@
                         </tr>
                         <tr>
                             <td class="name">Crystal Ceiling Light Pro</td>
-                            <td class="rrp" id="">—</td>
+                            <td class="rrp" id="YLXD08YL">—</td>
                             <td style="color: red;">—</td>
                             <td>—</td>
                         </tr>
@@ -144,7 +144,13 @@
                         </tr>
                         <tr>
                             <td class="name">Serene Eye-Friendly</td>
-                            <td class="rrp" id="">—</td>
+                            <td class="rrp" id="YLTD03YL">—</td>
+                            <td style="color: red;">—</td>
+                            <td>—</td>
+                        </tr>
+                        <tr>
+                            <td class="name">Serene Eye-Friendly Pro</td>
+                            <td class="rrp" id="YLTD04YL">—</td>
                             <td style="color: red;">—</td>
                             <td>—</td>
                         </tr>
