--- a/app/includes/shops.html
+++ b/app/includes/shops.html
@@ -66,37 +66,37 @@
                         </tr>
                         <tr>
                             <td class="name">LED Ceiling Light 320mm</td>
-                            <td class="rrp" id="YLXD01YL">—</td>
+                            <td class="rrp" id="SP00012244">—</td>
                             <td style="color: red;">—</td>
                             <td>—</td>
                         </tr>
                         <tr>
                             <td class="name">LED Ceiling Light Kids</td>
-                            <td class="rrp" id="YLXD01YL">—</td>
+                            <td class="rrp" id="SP00012449">—</td>
                             <td style="color: red;">—</td>
                             <td>—</td>
                         </tr>
                         <tr>
                             <td class="name">LED Ceiling Light 480 Galaxy</td>
-                            <td class="rrp" id="YLXD05YL">—</td>
+                            <td class="rrp" id="SP00012880">—</td>
                             <td style="color: red;">—</td>
                             <td>—</td>
                         </tr>
                         <tr>
                             <td class="name">LED Ceiling Light 650</td>
-                            <td class="rrp" id="YLXD02YL">—</td>
+                            <td class="rrp" id="SP00012246">—</td>
                             <td style="color: red;">—</td>
                             <td>—</td>
                         </tr>
                         <tr>
                             <td class="name">Crystal Ceiling Light Pro</td>
-                            <td class="rrp" id="YLXD08YL">—</td>
+                            <td class="rrp" id="SP00012450">—</td>
                             <td style="color: red;">—</td>
                             <td>—</td>
                         </tr>
                         <tr>
                             <td class="name">Crystal Ceiling Light Mini</td>
-                            <td class="rrp" id="YLXD09YL">—</td>
+                            <td class="rrp" id="SP00012451">—</td>
                             <td style="color: red;">—</td>
                             <td>—</td>
                         </tr>
@@ -105,19 +105,19 @@
                         </tr>
                         <tr>
                             <td class="name">Ambient Lamp Candela</td>
-                            <td class="rrp" id="YLFW01YL">—</td>
+                            <td class="rrp" id="SP00012939">—</td>
                             <td style="color: red;">—</td>
                             <td>—</td>
                         </tr>
                         <tr>
                             <td class="name">Mi Beside Lamp</td>
-                            <td class="rrp" id="MUE4063GL">—</td>
+                            <td class="rrp" id="SP00011456">—</td>
                             <td style="color: red;">—</td>
                             <td>—</td>
                         </tr>
                         <tr>
                             <td class="name">Motion Sensor Night Light</td>
-                            <td class="rrp" id="MUE4068GL">—</td>
+                            <td class="rrp" id="SP00011446">—</td>
                             <td style="color: red;">—</td>
                             <td>—</td>
                         </tr>
@@ -126,31 +126,31 @@
                         </tr>
                         <tr>
                             <td class="name">Desk LED Lamp Rechargeable</td>
-                            <td class="rrp" id="YLTD02YL">—</td>
+                            <td class="rrp" id="SP00012247">—</td>
                             <td style="color: red;">—</td>
                             <td>—</td>
                         </tr>
                         <tr>
                             <td class="name">Desk LED Lamp Standart</td>
-                            <td class="rrp" id="YLTD01YL">—</td>
+                            <td class="rrp" id="SP00012248">—</td>
                             <td style="color: red;">—</td>
                             <td>—</td>
                         </tr>
                         <tr>
                             <td class="name">Mi LED Table Lamp</td>
-                            <td class="rrp" id="MUE4066GL">—</td>
+                            <td class="rrp" id="SP00010453">—</td>
                             <td style="color: red;">—</td>
                             <td>—</td>
                         </tr>
                         <tr>
                             <td class="name">Serene Eye-Friendly</td>
-                            <td class="rrp" id="YLTD03YL">—</td>
+                            <td class="rrp" id="SP00012878">—</td>
                             <td style="color: red;">—</td>
                             <td>—</td>
                         </tr>
                         <tr>
                             <td class="name">Serene Eye-Friendly Pro</td>
-                            <td class="rrp" id="YLTD04YL">—</td>
+                            <td class="rrp" id="SP00012453">—</td>
                             <td style="color: red;">—</td>
                             <td>—</td>
                         </tr>
