--- a/app/includes/shops.html
+++ b/app/includes/shops.html
@@ -46,6 +46,11 @@
                             <img src="../img/logo-xiaomi-store(185x80).png" alt="">
                         </a>
                     </div>
+                    <div class="col-xs-6 col-sm-4 col-lg-2">
+                        <a class="shop-logo" href="https://5element.by/search/?q=yeelight&tab=products">
+                            <img src="../img/logo-patio(185x80).png" alt="">
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
