--- a/app/includes/content_nox-mini.html
+++ b/app/includes/content_nox-mini.html
@@ -6,7 +6,7 @@
                 <div class="text">
                     <h1>Yeelight Crystal Ceiling Light Mini</h1>
                     <h2>Светильник с датчиком движения</h2>
-                    <p>Площать освещения до 10 м² | Датчики освещнности и движения | Защита от насекомых</p>
+                    <p>Площать освещения до 10 м² | Датчики освещенности и движения | Защита от насекомых</p>
                 </div>
             </div>
         </section>
