--- a/app/includes/shops.html
+++ b/app/includes/shops.html
@@ -54,7 +54,7 @@
                 </div>
             </div>
         </section>
-        <section class="row">
+        <!-- <section class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 <table class="table price">
                     <thead>
@@ -162,6 +162,6 @@
                     </tbody>
                 </table>
             </div>
-        </section>
+        </section> -->
     </div>
 </div>
