--- a/app/includes/shops.html
+++ b/app/includes/shops.html
@@ -1,55 +1,90 @@
 <div class="row wheretobuy">
     <div class="col-xs-12 col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2 content">
-        <section class="row map">
+        <section class="row">
             <div class="col-xs-12">
-                <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A19632b369bf0b602d377afc91e00d489851f44a1583029ac5d469632cfe1d817&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
+                <div id="map" class="map"></div>
             </div>
         </section>
         <section class="row shops">
             <div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1 align-center">
                 <h1>Купить продукты YeeLight в Беларуси</h1>
-                <p>При покупке продукции YeeLight у официальных дилеров, вы получаете 100% оригинальный продукт с&nbsp;официальной
+                <p>При покупке продукции YeeLight у официальных дилеров, вы получаете 100% оригинальный продукт
+                    с&nbsp;официальной
                     гарантией от поставщика</p>
                 <div class="row">
                     <div class="col-xs-6 col-sm-4 col-lg-2">
-                        <a class="shop-logo" href="http://svetilkin.by/product/?f_in=product_search_form&_ia=&_iap=&search_product_name=xiaomi&search.x=14&search.y=10&_it_fs=g" title="СВЕТИЛКИН - Светотехнический магазин">
-                            <img src="../img/logo-svetilkin(185x80).png" title="СВЕТИЛКИН - Светотехнический магазин" alt="СВЕТИЛКИН - Светотехнический магазин">
+                        <a class="shop-logo" href="http://svetilkin.by/product/?f_in=product_search_form&_ia=&_iap=&search_product_name=xiaomi&search.x=14&search.y=10&_it_fs=g"
+                            title="СВЕТИЛКИН - Светотехнический магазин">
+                            <img src="../img/logo-svetilkin(185x80).png" title="СВЕТИЛКИН - Светотехнический магазин"
+                                alt="СВЕТИЛКИН - Светотехнический магазин">
                         </a>
+                        <div class="pin">
+                            <img src="../img/locate-places-on-maps.svg" alt="">
+                            <a href="#" class="show-location" id="svetilkin">на карте</a>
+                        </div>
                     </div>
-                     <div class="col-xs-6 col-sm-4 col-lg-2">
+                    <div class="col-xs-6 col-sm-4 col-lg-2">
                         <a class="shop-logo" href="https://xistore.by/search/?how=r&q=yeelight&where=iblock_1c_catalog">
                             <img src="../img/logo-xistore(185x80).png" alt="">
                         </a>
+                        <div class="pin">
+                            <img src="../img/locate-places-on-maps.svg" alt="">
+                            <a href="#" class="show-location" id="xistore">на карте</a>
+                        </div>
                     </div>
                     <div class="col-xs-6 col-sm-4 col-lg-2">
                         <a class="shop-logo" href="https://www.mile-diy.by/hypermarkets/minsk/">
                             <img src="../img/logo-mile(185x80).png" alt="">
                         </a>
+                        <div class="pin">
+                            <img src="../img/locate-places-on-maps.svg" alt="">
+                            <a href="#" class="show-location" id="mile">на карте</a>
+                        </div>
                     </div>
                     <div class="col-xs-6 col-sm-4 col-lg-2">
                         <a class="shop-logo" href="https://flamingo.by/lamps/&brand=Xiaomi&init=1">
                             <img src="../img/logo-flamingo(185x80).png" alt="">
                         </a>
+                        <div class="pin">
+                            <img src="../img/locate-places-on-maps.svg" alt="">
+                            <a href="#" class="show-location" id="flamingo">на карте</a>
+                        </div>
                     </div>
                     <div class="col-xs-6 col-sm-4 col-lg-2">
                         <a class="shop-logo" href="http://diy.by/">
                             <img src="../img/logo-materik(185x80).png" alt="">
                         </a>
+                        <div class="pin">
+                            <img src="../img/locate-places-on-maps.svg" alt="">
+                            <a href="#" class="show-location" id="materik">на карте</a>
+                        </div>
                     </div>
                     <div class="col-xs-6 col-sm-4 col-lg-2">
                         <a class="shop-logo" href="https://www.21vek.by/lamps/all/yeelight/">
                             <img src="../img/logo-21vek(185x80).png" alt="">
                         </a>
+                        <div class="pin">
+                            <img src="../img/locate-places-on-maps.svg" alt="">
+                            <a href="#" class="show-location" id="triovist">на карте</a>
+                        </div>
                     </div>
                     <div class="col-xs-6 col-sm-4 col-lg-2">
                         <a class="shop-logo" href="https://xiaomi-store.by/catalog/umnoe-osveshchenie_aksessuary-dlya-umnogo-osveshcheniya">
                             <img src="../img/logo-xiaomi-store(185x80).png" alt="">
                         </a>
+                        <div class="pin">
+                            <img src="../img/locate-places-on-maps.svg" alt="">
+                            <a href="#" class="show-location" id="xiaomi-store">на карте</a>
+                        </div>
                     </div>
                     <div class="col-xs-6 col-sm-4 col-lg-2">
                         <a class="shop-logo" href="https://5element.by/search/?q=yeelight&tab=products">
                             <img src="../img/logo-patio(185x80).png" alt="">
                         </a>
+                        <div class="pin">
+                            <img src="../img/locate-places-on-maps.svg" alt="">
+                            <a href="#" class="show-location" id="patio">на карте</a>
+                        </div>
                     </div>
                 </div>
             </div>
