--- a/app/includes/header.html
+++ b/app/includes/header.html
@@ -25,6 +25,9 @@
                                 <a href="/nox-pro/">Crystal&nbsp;Ceiling&nbsp;Light&nbsp;Pro</a>
                             </li>
                             <li class="sub-menu-item">
+                                <a href="/nox-plus/">Crystal&nbsp;Ceiling&nbsp;Light&nbsp;Plus</a>
+                            </li>
+                            <li class="sub-menu-item">
                                 <a href="/nox-mini/">Crystal&nbsp;Ceiling&nbsp;Light&nbsp;Mini</a>
                             </li>
                         </ul>
@@ -83,6 +86,9 @@
                             </li>
                             <li class="sub-menu-item">
                                 <a href="/nox-pro/">Crystal&nbsp;Ceiling&nbsp;Light&nbsp;Pro</a>
+                            </li>
+                            <li class="sub-menu-item">
+                                <a href="/nox-plus/">Crystal&nbsp;Ceiling&nbsp;Light&nbsp;Plus</a>
                             </li>
                             <li class="sub-menu-item">
                                 <a href="/nox-mini/">Crystal&nbsp;Ceiling&nbsp;Light&nbsp;Mini</a>
