--- a/app/less/main.less
+++ b/app/less/main.less
@@ -1441,17 +1441,20 @@ header {
 
     .pin {
         margin-bottom: 20px;
+
         .show-location {
             font-size: 140%;
             border-bottom: 1px dotted @yeelight-color;
             color: @yeelight-color;
             vertical-align: middle;
 
-            &:hover,&:focus{
+            &:hover,
+            &:focus {
                 text-decoration: none;
                 border: none;
             }
         }
+
         img {
             width: 15px !important;
             vertical-align: middle;
@@ -1746,8 +1749,7 @@ footer {
     border-radius: 3px;
 
     &:active,
-    &:visited
-        {
+    &:visited {
         text-decoration: none;
         color: @light-text;
     }
@@ -2170,6 +2172,204 @@ footer {
 
             @media(max-width: 768px) {
                 text-align: center;
+            }
+        }
+    }
+
+    &_content_6 {
+        margin: 0;
+
+        .item_1 {
+            background: url('../img/nox_05_1.jpg') no-repeat center center;
+            background-size: cover;
+        }
+
+        .item_2 {
+            background: url('../img/nox_05_2.jpg') no-repeat center center;
+            background-size: cover;
+        }
+
+        .item_3 {
+            background: url('../img/nox_05_3.jpg') no-repeat center center;
+            background-size: cover;
+        }
+
+        .text {
+            padding: 50% 0 0;
+            color: @light-text - 30%;
+
+            @media(max-width: 768px) {
+                padding: 50% 0 0;
+                text-align: center;
+            }
+        }
+    }
+
+    &_content_7 {
+        margin: 0;
+        padding: 70px 0 410px;
+        background: url("../img/nox_06.jpg") no-repeat top center;
+        background-size: cover;
+
+        .text {
+            color: @dark-text + 30%;
+
+            @media(max-width: 768px) {
+                text-align: center;
+            }
+        }
+    }
+
+    &_content_12 {
+        margin: 0;
+
+        .text {
+            padding: 40% 5% 0 10%;
+            color: @dark-text + 30%;
+
+            @media(max-width: 768px) {
+                padding: 10% 5% 0 5%;
+
+            }
+        }
+    }
+
+    &_content_8 {
+        margin: 0;
+        background: #eeeeee;
+
+        .text {
+            padding: 15% 5% 5% 10%;
+            color: @dark-text + 30%;
+
+            @media(max-width: 768px) {
+                padding: 10% 5% 0;
+            }
+        }
+    }
+
+    &_content_9 {
+        margin: 0;
+        padding: 70px 0;
+        background: #515151;
+
+        .text {
+            padding: 10% 5% 5% 10%;
+            color: @light-text - 30%;
+
+            @media(max-width: 768px) {
+                padding: 10% 5% 0;
+            }
+        }
+    }
+
+    &_content_10 {
+        margin: 0;
+        padding: 70px 0 50px;
+
+        .text {
+            padding: 10% 5% 5% 10%;
+            color: @dark-text + 30%;
+
+            @media(max-width: 768px) {
+                padding: 0 5% 0;
+            }
+        }
+    }
+
+    &_content_11 {
+        margin: 0;
+    }
+
+}
+
+.nox-plus {
+    margin-top: 80px;
+
+    &_content_1 {
+        margin: 0;
+        padding: 150px 0 150px;
+        background: linear-gradient(to top, #fafafa, #cac8c9);
+
+        img{
+            max-width: 100%;
+        }
+
+        @media(max-width: 768px){
+            padding: 100px 0;
+            background: #d2d0d1;
+            background-size: cover;
+        }
+
+        .text {
+            padding: 0 0 0 10%;
+            color: @dark-text + 30%;
+
+            @media(max-width: 768px) {
+                padding: 0;
+                text-align: center;
+            }
+        }
+    }
+
+    &_content_2 {
+        margin: 0;
+        padding: 250px 0 200px;
+        background: url('../img/nox_plus-02.jpg') no-repeat top center;
+        background-size: cover;
+
+        .text {
+            padding: 0 5% 0 10%;
+            color: @dark-text + 30%;
+
+            @media(max-width: 768px) {
+                padding: 10% 0 0;
+                text-align: center;
+            }
+        }
+    }
+
+    &_content_3 {
+        margin: 0;
+
+        .text {
+            padding: 15% 10% 10%;
+            color: @dark-text + 30%;
+
+            @media(max-width: 768px) {
+                padding: 10% 5%;
+            }
+        }
+    }
+
+
+
+    &_content_4 {
+        margin: 0;
+        padding: 70px 0;
+        background: #e5e5e5;
+
+        .text {
+            width: 80%;
+            margin: 0 auto;
+            color: @dark-text + 30%;
+
+            @media(max-width: 768px) {
+                width: 100%;
+                text-align: center;
+            }
+        }
+    }
+
+    &_content_5 {
+        margin: 0;
+        background: #e5e5e5;
+        .text {
+            padding: 15% 10% 10%;
+            color: @dark-text + 30%;
+
+            @media(max-width: 768px) {
+                padding: 10% 5%;
             }
         }
     }
