--- a/app/includes/shops.html
+++ b/app/includes/shops.html
@@ -1,10 +1,5 @@
 <div class="row wheretobuy">
     <div class="col-xs-12 col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2 content">
-        <section class="row">
-            <div class="col-xs-12">
-                <div id="map" class="map"></div>
-            </div>
-        </section>
         <section class="row shops">
             <div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1 align-center">
                 <h1>Купить продукты YeeLight в Беларуси</h1>
@@ -13,10 +8,11 @@
                     гарантией от поставщика</p>
                 <div class="row">
                     <div class="col-xs-6 col-sm-4 col-lg-2">
-                        <a class="shop-logo" href="http://svetilkin.by/product/?f_in=product_search_form&_ia=&_iap=&search_product_name=xiaomi&search.x=14&search.y=10&_it_fs=g"
-                            title="СВЕТИЛКИН - Светотехнический магазин">
-                            <img src="../img/logo-svetilkin(185x80).png" title="СВЕТИЛКИН - Светотехнический магазин"
-                                alt="СВЕТИЛКИН - Светотехнический магазин">
+                        <a class="shop-logo"
+                            href="http://svetilkin.by/product/?f_in=product_search_form&_ia=&_iap=&search_product_name=xiaomi&search.x=14&search.y=10&_it_fs=g"
+                            title="Светилкин — Светотехнический магазин">
+                            <img src="../img/logo-svetilkin(185x80).png" title="Свентилкин — Светотехнический магазин"
+                                alt="Светилкин — Светотехнический магазин">
                         </a>
                         <div class="pin">
                             <img src="../img/locate-places-on-maps.svg" alt="">
@@ -69,7 +65,8 @@
                         </div>
                     </div>
                     <div class="col-xs-6 col-sm-4 col-lg-2">
-                        <a class="shop-logo" href="https://xiaomi-store.by/catalog/umnoe-osveshchenie_aksessuary-dlya-umnogo-osveshcheniya">
+                        <a class="shop-logo"
+                            href="https://xiaomi-store.by/catalog/umnoe-osveshchenie_aksessuary-dlya-umnogo-osveshcheniya">
                             <img src="../img/logo-xiaomi-store(185x80).png" alt="">
                         </a>
                         <div class="pin">
@@ -86,7 +83,21 @@
                             <a href="#" class="show-location" id="patio">на карте</a>
                         </div>
                     </div>
+                    <div class="col-xs-6 col-sm-4 col-lg-2">
+                        <a class="shop-logo" href="#">
+                            <img src="../img/logo-yeelight(185x80).png" alt="">
+                        </a>
+                        <div class="pin">
+                            <img src="../img/locate-places-on-maps.svg" alt="">
+                            <a href="#" class="show-location-all" id="allshops">показать все</a>
+                        </div>
+                    </div>
                 </div>
+            </div>
+        </section>
+        <section class="row">
+            <div class="col-xs-12">
+                <div id="map" class="map"></div>
             </div>
         </section>
         <!-- <section class="row">
