--- a/app/includes/content_nox-plus.html
+++ b/app/includes/content_nox-plus.html
@@ -19,7 +19,10 @@
             <div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1">
                 <div class="text align-center">
                     <h2>Равномерное и яркое освещение</h2>
-                    <p>Crystal Plus с яркостью 2900 Лм обеспечивает равномерное и яркое освещение для вашего дома. Светильник поддерживает цветовую температуру в диапазоне от 2700 до 6500 К, что позволяет настраивать тон от четкого белого света до теплого желтого или любого другого в этом диапазоне.</p>
+                    <p>Crystal Plus с яркостью 2900 Лм обеспечивает равномерное и яркое освещение для вашего дома.
+                        Светильник поддерживает цветовую температуру в диапазоне от 2700 до 6500 К, что позволяет
+                        настраивать тон от четкого белого света до теплого желтого или любого другого в этом диапазоне.
+                    </p>
                 </div>
             </div>
         </section>
@@ -56,23 +59,28 @@
         </section>
 
         <section class="row nox-plus_content_3">
-            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6" style="padding: 0; font-size: 0;"><img src="../img/nox_plus_03.jpg"
-                    alt=""></div>
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6" style="padding: 0; font-size: 0;"><img
+                    src="../img/nox_plus_03.jpg" alt=""></div>
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6" style="padding: 0">
                 <div class="text">
                     <h2>Высокая цветопередача для ярких цветов</h2>
-                    <p>За счет 120 качественных светодиодиодов в светильнике, Crystal Plus достигает показателя цветопередачи Ra95, отражая истинные цвета предметов в помещении. Crystal Plus поможет вам видить мир таким какой он есть.</p>
+                    <p>За счет 120 качественных светодиодиодов в светильнике, Crystal Plus достигает показателя
+                        цветопередачи Ra95, отражая истинные цвета предметов в помещении. Crystal Plus поможет вам
+                        видить мир таким какой он есть.</p>
                 </div>
             </div>
         </section>
 
         <section class="row nox-plus_content_5">
-                <div class="col-xs-12 col-sm-6 col-sm-push-6 col-md-push-6 col-md-6 col-lg-6 col-lg-push-6" style="padding: 0; font-size: 0;"><img src="../img/nox_plus-03.jpg"
-                    alt=""></div>
-            <div class="col-xs-12 col-sm-6 col-sm-pull-6 col-md-6 col-md-pull-6 col-lg-6 col-lg-pull-6" style="padding: 0">
+            <div class="col-xs-12 col-sm-6 col-sm-push-6 col-md-push-6 col-md-6 col-lg-6 col-lg-push-6"
+                style="padding: 0; font-size: 0;"><img src="../img/nox_plus-03.jpg" alt=""></div>
+            <div class="col-xs-12 col-sm-6 col-sm-pull-6 col-md-6 col-md-pull-6 col-lg-6 col-lg-pull-6"
+                style="padding: 0">
                 <div class="text">
                     <h2>Приятный лунный свет</h2>
-                    <p>Тусклый и мягкий, как лунный свет, режим «Лунный свет» обеспечивает приятное освещение, которое поможет вам видеть в темноте, не повреждая глаза и не будя других. Минимальная яркость Crystal Plus может достигать 1 Лм яркости.</p>
+                    <p>Тусклый и мягкий, как лунный свет, режим «Лунный свет» обеспечивает приятное освещение, которое
+                        поможет вам видеть в темноте, не повреждая глаза и не будя других. Минимальная яркость Crystal
+                        Plus может достигать 1 Лм яркости.</p>
                 </div>
             </div>
         </section>
@@ -110,35 +118,138 @@
         </section>
 
         <section class="row nox_content_8">
-                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6" style="padding: 0">
-                    <div class="text">
-                        <h2>Несколько интеллектуальных элементов управления</h2>
-                        <p>Crystal Plus поддерживает несколько вариантов интеллектуального управления. Помимо традиционного
-                            настенного переключателя и пульта Bluetooth, с мобильными приложениями Yeelight или Mi Home вы
-                            можете легко настроить освещение в своей комнате. Синхронизируя ваш свет с помощью Google
-                            Assistant или Amazon Alexa, вы можете реализовать голосовое управление яркостью и цветовой
-                            температурой.</p>
-                        <ul class="function">
-                            <li>
-                                <span class="icon appcontrol"></span>
-                                <p>Приложение</p>
-                            </li>
-                            <li>
-                                <span class="icon swichcontrol"></span>
-                                <p>Выключатель</p>
-                            </li>
-                            <li>
-                                <span class="icon remotecontrol"></span>
-                                <p>Пульт</p>
-                            </li>
-                        </ul>
-                    </div>
-    
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6" style="padding: 0">
+                <div class="text">
+                    <h2>Несколько интеллектуальных элементов управления</h2>
+                    <p>Crystal Plus поддерживает несколько вариантов интеллектуального управления. Помимо традиционного
+                        настенного переключателя и пульта Bluetooth, с мобильными приложениями Yeelight или Mi Home вы
+                        можете легко настроить освещение в своей комнате. Синхронизируя ваш свет с помощью Google
+                        Assistant или Amazon Alexa, вы можете реализовать голосовое управление яркостью и цветовой
+                        температурой.</p>
+                    <ul class="function">
+                        <li>
+                            <span class="icon appcontrol"></span>
+                            <p>Приложение</p>
+                        </li>
+                        <li>
+                            <span class="icon swichcontrol"></span>
+                            <p>Выключатель</p>
+                        </li>
+                        <li>
+                            <span class="icon remotecontrol"></span>
+                            <p>Пульт</p>
+                        </li>
+                    </ul>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6" style="padding: 0; font-size: 0;"><img src="../img/nox_09.jpg"
-                        alt=""></div>
-            </section>
-<!--
+
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6" style="padding: 0; font-size: 0;"><img
+                    src="../img/nox_09.jpg" alt=""></div>
+        </section>
+
+        <section class="row nox-plus_content_3">
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6" style="padding: 0; font-size: 0;"><img
+                    src="../img/nox_plus-04.jpg" alt=""></div>
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6" style="padding: 0">
+                <div class="text">
+                    <h2>Интеграция с системой умный дом</h2>
+                    <p>Crystal Plus можно синхронизировать с различными интеллектуальными устройствами для совместной
+                        работы для вашего удобства. Например, при синхронизации с Mi Band, Crystal Plus можно настроить
+                        на автоматическое отключение, когда Mi Band обнаружит, что вы заснули.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="row nox-plus_content_7">
+            <div class="col-xs-12 col-sm-6 col-sm-push-6 col-md-push-6 col-md-6 col-lg-6 col-lg-push-6"
+                style="padding: 0; font-size: 0;"><img src="../img/nox_plus-05.jpg" alt=""></div>
+            <div class="col-xs-12 col-sm-6 col-sm-pull-6 col-md-6 col-md-pull-6 col-lg-6 col-lg-pull-6"
+                style="padding: 0">
+                <div class="text">
+                    <h2>Защита от насекомых</h2>
+                    <p>Антимоскитный дизайн Crystal Plus обеспечивает плотную герметизацию, а также предотвращает
+                        попадание пыли и насекомых внутрь лампы. Благодаря этому во время уборки вы можете забыть о
+                        светильнике.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="row nox-plus_content_6 row-flex">
+            <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 item align-center">
+                <div class="text">
+                    <h2>Прочная и легкая рамка из аллюминия. Два вида исполнения</h2>
+                </div>
+                <img src="/img/nox_plus_05_01.jpg" alt="">
+            </div>
+            <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 item align-center">
+                <div class="text">
+                    <h2>12 зажимов абажура обеспечивают полную герметичность</h2>
+                </div>
+                <img src="/img/nox_plus_05_02.jpg" alt="">
+            </div>
+            <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 item align-center">
+                <div class="text">
+                    <h2>Удобный поворотный замок для открывания корпуса</h2>
+                </div>
+                <img src="/img/nox_plus_05_03.jpg" alt="">
+            </div>
+        </section>
+
+        <section class="row nox-plus_content_11">
+            <div class="col-sm-12 col-md-12 col-lg-12">
+                <img src="/img/nox_plus_06.jpg" alt="">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th colspan="2">Характеристики</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Модель</td>
+                            <td>YLXD10YL</td>
+                        </tr>
+                        <tr>
+                            <td>Цвет</td>
+                            <td>Белый</td>
+                        </tr>
+                        <tr>
+                            <td>Размеры</td>
+                            <td>500x500x113mm</td>
+                        </tr>
+                        <tr>
+                            <td>Светвой поток</td>
+                            <td>Регулируемый: 350lm-6500lm</td>
+                        </tr>
+                        <tr>
+                            <td>Сеть</td>
+                            <td>Wi-Fi IEEE 802.11 b/g/n 2.4GHz</td>
+                        </tr>
+                        <tr>
+                            <td>Цветовая температура</td>
+                            <td>Регулируемая: 2700K-6500K</td>
+                        </tr>
+                        <tr>
+                            <td>CRI</td>
+                            <td>>95</td>
+                        </tr>
+                        <tr>
+                            <td>Мощность</td>
+                            <td>45W</td>
+                        </tr>
+                        <tr>
+                            <td>Поддерживаемые платформы</td>
+                            <td>Android 4.4 и выше / IOS 8.0 и выше</td>
+                        </tr>
+                        <tr>
+                            <td>Управление</td>
+                            <td>Голосовое, пульт, приложение</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </section>
+        <!--
         <section class="row nox_content_7">
             <div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2 align-center">
                 <div class="text">
@@ -188,55 +299,6 @@
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6" style="padding: 0; font-size: 0;"><img src="../img/nox_11.png"
                     alt=""></div>
         </section>
-
-        <section class="row nox_content_11">
-            <div class="col-sm-12 col-md-12 col-lg-12">
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th colspan="2">Характеристики</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Модель</td>
-                            <td>YLXD08YL</td>
-                        </tr>
-                        <tr>
-                            <td>Цвет</td>
-                            <td>Белый</td>
-                        </tr>
-                        <tr>
-                            <td>Размеры</td>
-                            <td>960x640x113mm</td>
-                        </tr>
-                        <tr>
-                            <td>Светвой поток</td>
-                            <td>Регулируемый: 700lm-6000lm</td>
-                        </tr>
-                        <tr>
-                            <td>Сеть</td>
-                            <td>Wi-Fi IEEE 802.11 b/g/n 2.4GHz</td>
-                        </tr>
-                        <tr>
-                            <td>Цветовая температура</td>
-                            <td>Регулируемая: 2700K-6500K</td>
-                        </tr>
-                        <tr>
-                            <td>CRI</td>
-                            <td>>95</td>
-                        </tr>
-                        <tr>
-                            <td>Мощность</td>
-                            <td>90W</td>
-                        </tr>
-                        <tr>
-                            <td>Поддерживаемые платформы</td>
-                            <td>Android 4.4 и выше / IOS 8.0 и выше</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </section> -->
+ -->
     </div>
 </div>
