--- a/app/less/main.less
+++ b/app/less/main.less
@@ -2387,11 +2387,13 @@ footer {
         }
 
         .text {
+            height: 180px;
             padding: 10% 5% 5%;
             color: @dark-text + 30%;
 
             @media(max-width: 768px) {
-                padding: 50% 0 0;
+                height: auto;
+                padding: 10% 0 0;
             }
         }
     }
@@ -2406,6 +2408,395 @@ footer {
 
             @media(max-width: 768px) {
                 padding: 10% 5%;
+            }
+        }
+    }
+
+    &_content_12 {
+        margin: 0;
+
+        .text {
+            padding: 40% 5% 0 10%;
+            color: @dark-text + 30%;
+
+            @media(max-width: 768px) {
+                padding: 10% 5% 0 5%;
+
+            }
+        }
+    }
+
+    &_content_8 {
+        margin: 0;
+        background: #eeeeee;
+
+        .text {
+            padding: 15% 5% 5% 10%;
+            color: @dark-text + 30%;
+
+            @media(max-width: 768px) {
+                padding: 10% 5% 0;
+            }
+        }
+    }
+
+    &_content_9 {
+        margin: 0;
+        padding: 70px 0;
+        background: #515151;
+
+        .text {
+            padding: 10% 5% 5% 10%;
+            color: @light-text - 30%;
+
+            @media(max-width: 768px) {
+                padding: 10% 5% 0;
+            }
+        }
+    }
+
+    &_content_10 {
+        margin: 0;
+        padding: 70px 0 50px;
+
+        .text {
+            padding: 10% 5% 5% 10%;
+            color: @dark-text + 30%;
+
+            @media(max-width: 768px) {
+                padding: 0 5% 0;
+            }
+        }
+    }
+
+    &_content_11 {
+        margin: 0;
+        img{
+            display: block;
+            max-width: 50%;
+            margin: 0 auto;
+
+            @media(max-width: 768px) {
+                max-width: 80%;
+            }
+        }
+    }
+
+}
+
+.nox-round {
+    margin-top: 80px;
+
+    &_content_1 {
+        margin: 0;
+        padding: 150px 0 150px;
+        background: linear-gradient(to bottom, #b9b9b9, #efefef);
+
+        img{
+            max-width: 100%;
+        }
+
+        @media(max-width: 768px){
+            padding: 100px 0;
+            background: #d2d0d1;
+            background-size: cover;
+        }
+
+        .text {
+            padding: 0 0 0 10%;
+            color: @dark-text + 30%;
+
+            @media(max-width: 768px) {
+                padding: 0;
+                text-align: center;
+            }
+        }
+    }
+
+    &_content_2 {
+        margin: 0;
+
+        .text {
+            padding: 10% 5% 10% 10%;
+            color: @dark-text + 30%;
+
+            @media(max-width: 768px) {
+                padding: 10% 5%;
+            }
+        }
+    }
+
+    &_content_3 {
+        margin: 0;
+
+        .text {
+            padding: 10% 5% 10% 10%;
+            color: @dark-text + 30%;
+
+            @media(max-width: 768px) {
+                padding: 10% 5%;
+            }
+        }
+    }
+
+
+
+    &_content_4 {
+        margin: 0;
+        padding: 70px 0;
+        background: #e5e5e5;
+
+        .text {
+            width: 80%;
+            margin: 0 auto;
+            color: @dark-text + 30%;
+
+            @media(max-width: 768px) {
+                width: 100%;
+                text-align: center;
+            }
+        }
+    }
+
+    &_content_5 {
+        margin: 0;
+        .text {
+            padding: 10% 5% 5% 10%;
+            color: @dark-text + 30%;
+
+            @media(max-width: 768px) {
+                padding: 10% 5%;
+                
+            }
+        }
+    }
+
+    &_content_6 {
+        margin: 0;
+
+        .item{
+            padding: 0 !important;
+        }
+
+        img{
+            max-width: 100%;
+        }
+
+        .text {
+            padding: 10% 5% 5%;
+            color: @dark-text + 30%;
+
+            @media(max-width: 768px) {
+                padding: 50% 0 0;
+            }
+        }
+    }
+
+    &_content_7 {
+        margin: 0;
+        background: #8d8d8d;
+
+        .text {
+            padding: 15% 10% 10%;
+            color: @light-text + 30%;
+
+            @media(max-width: 768px) {
+                padding: 10% 5%;
+            }
+        }
+    }
+
+    &_content_12 {
+        margin: 0;
+
+        .text {
+            padding: 40% 5% 0 10%;
+            color: @dark-text + 30%;
+
+            @media(max-width: 768px) {
+                padding: 10% 5% 0 5%;
+
+            }
+        }
+    }
+
+    &_content_8 {
+        margin: 0;
+        background: #eeeeee;
+
+        .text {
+            padding: 15% 5% 5% 10%;
+            color: @dark-text + 30%;
+
+            @media(max-width: 768px) {
+                padding: 10% 5% 0;
+            }
+        }
+    }
+
+    &_content_9 {
+        margin: 0;
+        padding: 70px 0;
+        background: #515151;
+
+        .text {
+            padding: 10% 5% 5% 10%;
+            color: @light-text - 30%;
+
+            @media(max-width: 768px) {
+                padding: 10% 5% 0;
+            }
+        }
+    }
+
+    &_content_10 {
+        margin: 0;
+        padding: 70px 0 50px;
+
+        .text {
+            padding: 10% 5% 5% 10%;
+            color: @dark-text + 30%;
+
+            @media(max-width: 768px) {
+                padding: 0 5% 0;
+            }
+        }
+    }
+
+    &_content_11 {
+        margin: 0;
+        img{
+            display: block;
+            max-width: 50%;
+            margin: 20px auto;
+
+            @media(max-width: 768px) {
+                max-width: 70%;
+            }
+        }
+    }
+
+}
+
+.downlight {
+    margin-top: 80px;
+
+    &_content_1 {
+        margin: 0;
+        padding: 100px 0 80px;
+        background: linear-gradient(to bottom, #797979, #858585);
+
+        img{
+            max-width: 60%;
+            @media(max-width: 768px) {
+                max-width: 80%;
+            }
+        }
+
+        @media(max-width: 768px){
+            padding: 100px 0;
+            background-size: cover;
+        }
+
+        .text {
+            color: @light-text - 30%;
+
+            @media(max-width: 768px) {
+                padding: 0;
+                text-align: center;
+            }
+        }
+    }
+
+    &_content_2 {
+        margin: 0;
+
+        .text {
+            padding: 15% 5% 0 10%;
+            color: @dark-text + 30%;
+
+            @media(max-width: 990px) {
+                padding: 10% 5%;
+            }
+        }
+    }
+
+    &_content_3 {
+        margin: 0;
+
+        .text {
+            padding: 15% 10% 10%;
+            color: @dark-text + 30%;
+
+            @media(max-width: 768px) {
+                padding: 10% 5%;
+            }
+        }
+    }
+
+
+    &_content_4 {
+        margin: 0;
+        padding: 150px 0 250px;
+        background: url('../img/downlight_04.jpg') no-repeat top center;
+        background-size: cover;
+
+        .text {
+            width: 80%;
+            margin: 0 auto;
+            color: @dark-text + 30%;
+
+            @media(max-width: 768px) {
+                width: 100%;
+                text-align: center;
+            }
+        }
+    }
+
+    &_content_5 {
+        margin: 0;
+        background: #f6f6f6;
+
+        .text {
+            padding: 15% 5% 0 10%;
+            color: @dark-text + 30%;
+
+            @media(max-width: 768px) {
+                padding: 10% 5%;
+            }
+        }
+    }
+
+    &_content_6 {
+        margin: 0;
+
+        .item{
+            padding: 0 !important;
+        }
+
+        img{
+            max-width: 100%;
+        }
+
+        .text {
+            padding: 5% 5% 5%;
+            color: @dark-text + 30%;
+
+            @media(max-width: 768px) {
+                padding: 10% 5%;
+            }
+        }
+    }
+
+    &_content_7 {
+        margin: 0;
+        padding: 30px 0;
+        img{
+            display: block;
+            width: 80%;
+            margin: 0 auto;
+            @media(max-width: 768px) {
+                width: 100%;
             }
         }
     }
