--- a/app/includes/header.html
+++ b/app/includes/header.html
@@ -7,19 +7,13 @@
             <nav class="mobile" style="display: none;">
                 <ul class="menu">
                     <li class="menu-item">
-                        <a href="">Потолочные светильники</a>
+                        <a href="">Потолочные&nbsp;светильники</a>
                         <ul class="sub-menu">
                             <li class="sub-menu-item">
                                 <a href="/luna/">LED&nbsp;Ceiling&nbsp;Light</a>
                             </li>
                             <li class="sub-menu-item">
                                 <a href="/kids/">LED&nbsp;Ceiling&nbsp;Light&nbsp;Kids</a>
-                            </li>
-                            <li class="sub-menu-item">
-                                <a href="/luna/">LED&nbsp;Ceiling&nbsp;Light&nbsp;480</a>
-                            </li>
-                            <li class="sub-menu-item">
-                                <a href="/luna/">LED&nbsp;Ceiling&nbsp;Light&nbsp;650</a>
                             </li>
                             <li class="sub-menu-item">
                                 <a href="/nox-pro/">Crystal&nbsp;Ceiling&nbsp;Light&nbsp;Pro</a>
@@ -29,6 +23,12 @@
                             </li>
                             <li class="sub-menu-item">
                                 <a href="/nox-mini/">Crystal&nbsp;Ceiling&nbsp;Light&nbsp;Mini</a>
+                            </li>
+                            <li class="sub-menu-item">
+                                <a href="/nox-round/">Crystal&nbsp;Ceiling&nbsp;Light&nbsp;Round</a>
+                            </li>
+                            <li class="sub-menu-item">
+                                <a href="/embedded/">Ceiling&nbsp;Light&nbsp;Embedded</a>
                             </li>
                         </ul>
                     </li>
@@ -79,12 +79,6 @@
                                 <a href="/kids/">LED&nbsp;Ceiling&nbsp;Light&nbsp;Kids</a>
                             </li>
                             <li class="sub-menu-item">
-                                <a href="/luna/">LED&nbsp;Ceiling&nbsp;Light&nbsp;480</a>
-                            </li>
-                            <li class="sub-menu-item">
-                                <a href="/luna/">LED&nbsp;Ceiling&nbsp;Light&nbsp;650</a>
-                            </li>
-                            <li class="sub-menu-item">
                                 <a href="/nox-pro/">Crystal&nbsp;Ceiling&nbsp;Light&nbsp;Pro</a>
                             </li>
                             <li class="sub-menu-item">
@@ -92,6 +86,12 @@
                             </li>
                             <li class="sub-menu-item">
                                 <a href="/nox-mini/">Crystal&nbsp;Ceiling&nbsp;Light&nbsp;Mini</a>
+                            </li>
+                            <li class="sub-menu-item">
+                                <a href="/nox-round/">Crystal&nbsp;Ceiling&nbsp;Light&nbsp;Round</a>
+                            </li>
+                            <li class="sub-menu-item">
+                                <a href="/embedded/">Ceiling&nbsp;Light&nbsp;Embedded</a>
                             </li>
                         </ul>
                     </li>
