--- a/app/includes/shops.html
+++ b/app/includes/shops.html
@@ -2,7 +2,7 @@
     <div class="col-xs-12 col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2 content">
         <section class="row shops">
             <div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1 align-center">
-                <h1>Купить продукты YeeLight в Беларуси</h1>
+                <h1>Купить продукты YeeLight в&nbsp;Беларуси</h1>
                 <p>При покупке продукции YeeLight у официальных дилеров, вы получаете 100% оригинальный продукт
                     с&nbsp;официальной
                     гарантией от поставщика</p>
